--- a/app/employee_management_ui/webapp/model/cardManifests.json
+++ b/app/employee_management_ui/webapp/model/cardManifests.json
@@ -83,7 +83,7 @@
 						{
 						  "type": "Navigation",
 						  "parameters": {
-							"url": "#/needsObjectPage/{name}",
+							"url": "#/Main/{name}",
 							"target": "_self"
 						  }
 						}
