--- a/app/employee_management_ui/webapp/model/cardManifests.json
+++ b/app/employee_management_ui/webapp/model/cardManifests.json
@@ -144,7 +144,16 @@
 					"info": {
 						"value": "{info}",
 						"state": "{infoState}"
-					}
+					},
+					"actions": [
+						{
+						  "type": "Navigation",
+						  "parameters": {
+							"url": "#/my-tasks",
+							"target": "_self"
+						  }
+						}
+					  ]	
 				}
 			}
 		}
