Push as of 06/ leaving position validation

--- a/app/employee_management_ui/webapp/manifest.json
+++ b/app/employee_management_ui/webapp/manifest.json
@@ -139,7 +139,7 @@
                     "target": "Tasks"
                 },
                 {
-                    "pattern": "positionValidation",
+                    "pattern": "positionValidation/{title}",
                     "name": "Position Validation",
                     "target": "Validation"
                 }
