--- a/app/employee_management_ui/webapp/model/cardManifests.json
+++ b/app/employee_management_ui/webapp/model/cardManifests.json
@@ -149,7 +149,7 @@
 						{
 						  "type": "Navigation",
 						  "parameters": {
-							"url": "#/my-tasks",
+							"url": "#/{name}/{name}",
 							"target": "_self"
 						  }
 						}
