--- a/mta.yaml
+++ b/mta.yaml
@@ -1,136 +1,8 @@
-_schema-version: "3.1"
+_schema-version: '3.1'
 ID: EmployeeManagment
-description: A simple CAP project.
 version: 1.0.0
-modules:
-  - name: EmployeeManagment-srv
-    type: nodejs
-    path: gen/srv
-    requires:
-      - name: EmployeeManagment-db
-      - name: EmployeeManagment-auth
-    provides:
-      - name: srv-api
-        properties:
-          srv-url: ${default-url}
-    parameters:
-      buildpack: nodejs_buildpack
-      readiness-health-check-http-endpoint: /health
-      readiness-health-check-type: http
-    build-parameters:
-      builder: npm
-  - name: EmployeeManagment-db-deployer
-    type: hdb
-    path: gen/db
-    requires:
-      - name: EmployeeManagment-db
-    parameters:
-      buildpack: nodejs_buildpack
-  - name: EmployeeManagment-destination-content
-    type: com.sap.application.content
-    requires:
-      - name: EmployeeManagment-destination-service
-        parameters:
-          content-target: true
-      - name: EmployeeManagment_html_repo_host
-        parameters:
-          service-key:
-            name: EmployeeManagment_html_repo_host-key
-      - name: EmployeeManagment-auth
-        parameters:
-          service-key:
-            name: EmployeeManagment-auth-key
-    parameters:
-      content:
-        instance:
-          destinations:
-            - Name: EmployeeManagementRouter_EmployeeManagment_html_repo_host
-              ServiceInstanceName: EmployeeManagment-html5-app-host-service
-              ServiceKeyName: EmployeeManagment_html_repo_host-key
-              sap.cloud.service: EmployeeManagementRouter
-            - Authentication: OAuth2UserTokenExchange
-              Name: EmployeeManagementRouter_EmployeeManagment_auth
-              ServiceInstanceName: EmployeeManagment-auth
-              ServiceKeyName: EmployeeManagment-auth-key
-              sap.cloud.service: EmployeeManagementRouter
-          existing_destinations_policy: ignore
-    build-parameters:
-      no-source: true
-  - name: EmployeeManagment-app-content
-    type: com.sap.application.content
-    path: .
-    requires:
-      - name: EmployeeManagment_html_repo_host
-        parameters:
-          content-target: true
-    build-parameters:
-      build-result: resources
-      requires:
-        - artifacts:
-            - sapdeloitteemployeemanagementemployeemanagementui.zip
-          name: sapdeloitteemployeemanagementemployeemanagementui
-          target-path: resources/
-  - name: sapdeloitteemployeemanagementemployeemanagementui
-    type: html5
-    path: app/employee_management_ui
-    build-parameters:
-      build-result: dist
-      builder: custom
-      commands:
-        - npm install
-        - npm run build:cf
-      supported-platforms:
-        []
-resources:
-  - name: EmployeeManagment-db
-    type: com.sap.xs.hdi-container
-    parameters:
-      service: hana
-      service-plan: hdi-shared
-  - name: EmployeeManagment-auth
-    type: org.cloudfoundry.managed-service
-    parameters:
-      config:
-        tenant-mode: dedicated
-        xsappname: EmployeeManagment-${org}-${space}
-      path: ./xs-security.json
-      service: xsuaa
-      service-plan: application
-  - name: EmployeeManagment-destination-service
-    type: org.cloudfoundry.managed-service
-    parameters:
-      config:
-        HTML5Runtime_enabled: true
-        init_data:
-          instance:
-            destinations:
-              - Authentication: NoAuthentication
-                Name: ui5
-                ProxyType: Internet
-                Type: HTTP
-                URL: https://ui5.sap.com
-              - Authentication: NoAuthentication
-                HTML5.DynamicDestination: true
-                HTML5.ForwardAuthToken: true
-                Name: EmployeeManagment-srv-api
-                ProxyType: Internet
-                Type: HTTP
-                URL: ~{srv-api/srv-url}
-            existing_destinations_policy: update
-        version: 1.0.0
-      service: destination
-      service-name: EmployeeManagment-destination-service
-      service-plan: lite
-    requires:
-      - name: srv-api
-  - name: EmployeeManagment_html_repo_host
-    type: org.cloudfoundry.managed-service
-    parameters:
-      service: html5-apps-repo
-      service-name: EmployeeManagment-html5-app-host-service
-      service-plan: app-host
+description: "A simple CAP project."
 parameters:
-  deploy_mode: html5-repo
   enable-parallel-deployments: true
 build-parameters:
   before-all:
@@ -138,3 +10,46 @@ build-parameters:
       commands:
         - npm ci
         - npx cds build --production
+modules:
+  - name: EmployeeManagment-srv
+    type: nodejs
+    path: gen/srv
+    parameters:
+      buildpack: nodejs_buildpack
+      readiness-health-check-type: http
+      readiness-health-check-http-endpoint: /health
+    build-parameters:
+      builder: npm
+    provides:
+      - name: srv-api # required by consumers of CAP services (e.g. approuter)
+        properties:
+          srv-url: ${default-url}
+    requires:
+      - name: EmployeeManagment-auth
+
+  - name: EmployeeManagment
+    type: approuter.nodejs
+    path: app/router
+    parameters:
+      keep-existing-routes: true
+      disk-quota: 256M
+      memory: 256M
+    requires:
+      - name: srv-api
+        group: destinations
+        properties:
+          name: srv-api # must be used in xs-app.json as well
+          url: ~{srv-url}
+          forwardAuthToken: true
+      - name: EmployeeManagment-auth
+
+resources:
+  - name: EmployeeManagment-auth
+    type: org.cloudfoundry.managed-service
+    parameters:
+      service: xsuaa
+      service-plan: application
+      path: ./xs-security.json
+      config:
+        xsappname: EmployeeManagment-${org}-${space}
+        tenant-mode: dedicated
