Added Council Collab

--- a/app/employee_management_ui/webapp/manifest.json
+++ b/app/employee_management_ui/webapp/manifest.json
@@ -167,6 +167,11 @@
                     "pattern": "rosters",
                     "name": "rosters",
                     "target": "Rosters"
+                },
+                {
+                    "pattern": "rosters/{name}",
+                    "name": "PositionRoaster",
+                    "target": "Rosters" 
                 }
             ],
             "targets": {
