--- a/app/employee_management_ui/webapp/model/cardManifests.json
+++ b/app/employee_management_ui/webapp/model/cardManifests.json
@@ -75,7 +75,7 @@
 						{
 						  "type": "Navigation",
 						  "parameters": {
-							"url": "#/main/{name}",
+							"url": "#/rosters/{name}",
 							"target": "_self"
 						  }
 						}
