--- a/app/employee_management_ui/webapp/model/cardManifests.json
+++ b/app/employee_management_ui/webapp/model/cardManifests.json
@@ -22,7 +22,7 @@
 				},	
 			"type": "List",
 			"header": {
-				"title": "S&D Councils",
+				"title": "My Councils",
 				"status": {
 					"text": "3 of 4"
 				}
